src/objects/RFP_Class_year__c.object
<CustomObject>
    <fields>
        <fullName>Campus__c</fullName>
        <formula>Class_Year__r.Campus_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Number__c</fullName>
        <formula>TEXT(Class_Year__r.Class_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Year</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>RPF Class years</relationshipLabel>
        <relationshipName>RPF_Class_years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCCC_Campus_ID__c</fullName>
        <formula>Class_Year__r.NCCC_Campus_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCCC Campus ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>RFP Class Years</relationshipLabel>
        <relationshipName>RPF_Class_years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Class_Year__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Class_Identifier__c</fullName>
        <formula>TEXT(Class_Year__r.Sub_Class_Identifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Class Identifier</label>
        <type>Text</type>
    </fields>
    <label>RFP Class year</label>
    <nameField>
        <displayFormat>RFP Class year - {0000}</displayFormat>
        <label>RFP Class year Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPF Class years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>